--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,9 @@
         <title>Advent of Code Charts</title>
     </head>
     <body>
-        <canvas id="starsOverTime" width="1000" height="500"></canvas>
         <canvas id="pointsOverTime" width="1000" height="500"></canvas>
+        <canvas id="starsOverTime" width="1000" height="500"></canvas>
+        <canvas id="timePerStar" width="1000" height="500"></canvas>
         
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.3/moment.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
