Add scatter chart for time taken (log)

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,13 @@
         <title>Advent of Code Charts</title>
     </head>
     <body>
-        <canvas id="pointsOverTime" width="1000" height="500"></canvas>
-        <canvas id="starsOverTime" width="1000" height="500"></canvas>
-        <canvas id="timePerStar" width="1000" height="500"></canvas>
-        
+        <div style="max-width: 1000px;">
+            <canvas id="pointsOverTime" width="1000" height="500"></canvas>
+            <canvas id="starsOverTime" width="1000" height="500"></canvas>
+            <canvas id="timePerStar" width="1000" height="500"></canvas>
+            <canvas id="dayVsTime" width="1000" height="500"></canvas>
+        </div>
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.3/moment.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
