Make runnable within AoC site

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,23 @@
 <html>
     <head>
         <title>Advent of Code Charts</title>
+        <style>
+            /* simulate aoc website */
+            body {
+                background: #0f0f23; /*337 x 5*/
+                color: #cccccc;
+                font-family: "Source Code Pro", monospace;
+                font-size: 14pt;
+                min-width: 60em;
+            }
+            a {
+                text-decoration: none;
+                color: #009900;
+            }
+            a:hover {
+                color: #99ff99;
+            }
+        </style>
     </head>
     <body>
         <script src="js/dummyData.js"></script>
