--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Advent of Code Charts</title>
+        <meta charset="UTF-8"/>
         <style>
             /* simulate aoc website */
             body {
