Fix username detection
The PR had a tad fragile approach as shown by the more complex
html that's possible. We temporarily fix that before we'll go
for a more robust solution.

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,16 @@
         </style>
     </head>
     <body>
+        <header style="margin-bottom: 20px;">
+            <div class="user">Jeroen Heijmans <a href="/2022/support" class="supporter-badge" title="Advent of Code Supporter">(AoC++)</a> <a href="https://example.org" target="_blank" class="sponsor-badge" title="Member of sponsor: Example">(Sponsor)</a> <span class="star-count">14*</span></div>
+        </header>
+        <div style="background: rgba(0,0,0,0.2); border: 1px solid gray; color: rgba(204, 204, 204,0.8); height: 200px; padding: 40px; text-align: center; margin-bottom: 10px;">
+            Regular AoC website content comes first.
+            <br>
+            This is just a placeholder for that content.
+            <br><br>
+            The plugin content always sits below
+        </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
         <script src="js/dummyData.js"></script>
