--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
                 text-decoration: none;
                 color: #009900;
             }
-            a:hover {
+            a:hover, a.active {
                 color: #99ff99;
             }
         </style>
@@ -29,13 +29,30 @@
             <br>
             This is just a placeholder for that content.
             <br><br>
+            Choose testing with leaderboard:
+            <br>
+            <a class="switcher" href="/?default">[Default]</a>
+            <a class="switcher" href="/?empty">[Empty]</a>
+            <a class="switcher" href="/?regular">[Regular]</a>
+            <a class="switcher" href="/?large">[Large]</a>
+            <br><br>
             The plugin content always sits below
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.1.2/chart.umd.js" integrity="sha512-t41WshQCxr9T3SWH3DBZoDnAT9gfVLtQS+NKO60fdAwScoB37rXtdxT/oKe986G0BFnP4mtGzXxuYpHrMoMJLA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-moment@1.0.1"></script>
-        <script src="js/dummyData.js"></script>
-        <script src="js/app.js"></script>
+        <script>
+            [...document.querySelectorAll(".switcher")].forEach(a => !a.href.includes(window.location.search) || a.classList.add("active"));
+            const tag = document.createElement("script");
+            let leaderboard = window.location.search.replace("?", "") || "default";
+            tag.src = `js/dummyData-${leaderboard}.js`;
+            tag.onload = () => {
+                const app = document.createElement("script");
+                app.src = "js/app.js";
+                document.body.appendChild(app);
+            };
+            document.body.appendChild(tag);
+        </script>
         <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script> 
     </body>
 </html>
