Add initial full screen mode
Fixes #93 (although it needs some follow-up work)

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
                 color: #99ff99;
             }
         </style>
+        <link rel="stylesheet" href="css/app.css">
     </head>
     <body>
         <header style="margin-bottom: 20px;">
