Add extra test case for easier testing

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
             <br>
             <a class="switcher" href="/?default">[Default]</a>
             <a class="switcher" href="/?empty">[Empty]</a>
+            <a class="switcher" href="/?oneDay">[One Day]</a>
             <a class="switcher" href="/?regular">[Regular]</a>
             <a class="switcher" href="/?large">[Large]</a>
             <br><br>
