Update index.html to default to the AoC font

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,9 @@
                 color: #99ff99;
             }
         </style>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/app.css">
     </head>
     <body>
